--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: MyResume - v4.9.2
-* Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -489,8 +482,9 @@ section {
 # Skills
 --------------------------------------------------------------*/
 .skills{
-  padding-top: 20px;
-  padding-bottom: 5px;
+  margin-top: 10vh;
+  padding-top: 10vh;
+  /* padding-bottom: 5vh; */
   /* height: 41vh; */
   /* overflow-y: scroll; */
   /* background-color: #0e3e6a; */
@@ -594,8 +588,9 @@ section {
 # Portfolio
 --------------------------------------------------------------*/
 .portfolio{
-  padding-top: 30px;
-  padding-bottom: 15vh;
+  margin-top: 10vh;
+  padding-top: 10vh;
+  padding-bottom: 25vh;
   /* height: 100vh; */
   /* overflow-y: scroll; */
   /* width: calc(100%); */
@@ -829,6 +824,9 @@ section {
 # Services
 --------------------------------------------------------------*/
 .services{
+  /* margin-top: 10vh; */
+  padding-top: 10vh;
+  padding-bottom: 15vh;
   /* height: 60vh; */
   /* overflow-y: scroll; */
   /* background-color: #0e3e6a; */
@@ -1052,9 +1050,9 @@ section {
 --------------------------------------------------------------*/
 
 .contact{
-  padding-top: 6vh;
-  padding-bottom: 150px;
-  /* height: 100vh; */
+  margin-top: 15vh;
+  padding-top: 1vh;
+  padding-bottom: 20vh;
 }
 .contact .info {
   width: 100%;
@@ -1136,7 +1134,7 @@ section {
 .contact .php-email-form_new .sent-message {
   display: none;
   color: #fff;
-  background: #18d26e;
+  background: #26bb6bf3;
   text-align: center;
   padding: 15px;
   font-weight: 600;
