--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,6 +526,9 @@ section {
 /*--------------------------------------------------------------
 # Resume
 --------------------------------------------------------------*/
+.resume{
+  padding-bottom: 15vh;
+}
 .resume .resume-title {
   font-size: 26px;
   font-weight: 700;
