--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,7 +483,7 @@ section {
 --------------------------------------------------------------*/
 .skills{
   margin-top: 10vh;
-  padding-top: 10vh;
+  /* padding-top: 10vh; */
   /* padding-bottom: 5vh; */
   /* height: 41vh; */
   /* overflow-y: scroll; */
