skills pad and margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,8 +482,8 @@ section {
 # Skills
 --------------------------------------------------------------*/
 .skills{
-  margin-top: 2vh;
-  /* padding-top: 10vh; */
+  margin-top: 0vh;
+  padding-top: 0vh;
   /* padding-bottom: 5vh; */
   /* height: 41vh; */
   /* overflow-y: scroll; */
