--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,8 +483,8 @@ section {
 --------------------------------------------------------------*/
 .skills{
   margin-top: 5vh;
-  padding-top: 0vh;
-  /* padding-bottom: 5vh; */
+  padding-top: 5vh;
+  padding-bottom: 3vh;
   /* height: 41vh; */
   /* overflow-y: scroll; */
   /* background-color: #0e3e6a; */
@@ -592,8 +592,8 @@ section {
 --------------------------------------------------------------*/
 .portfolio{
   margin-top: 10vh;
-  padding-top: 10vh;
-  padding-bottom: 25vh;
+  padding-top: 5vh;
+  padding-bottom: 7vh;
   /* height: 100vh; */
   /* overflow-y: scroll; */
   /* width: calc(100%); */
@@ -602,7 +602,7 @@ section {
 
 .portfolio .portfolio-item {
 
-  margin-top: 40px;
+  margin-top: 20px;
   
 }
 
@@ -828,8 +828,8 @@ section {
 --------------------------------------------------------------*/
 .services{
   /* margin-top: 10vh; */
-  padding-top: 10vh;
-  padding-bottom: 15vh;
+  padding-top: 5vh;
+  padding-bottom: 0vh;
   /* height: 60vh; */
   /* overflow-y: scroll; */
   /* background-color: #0e3e6a; */
@@ -840,7 +840,7 @@ section {
   margin: 0px 30px 30px 30px;
   transition: all ease-in-out 0.3s;
   background: #fff;
-  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.1);
+  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
 }
 
 .services .icon-box .icon {
@@ -966,96 +966,13 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Testimonials
---------------------------------------------------------------*/
-.testimonials .section-header {
-  margin-bottom: 40px;
-}
-
-.testimonials .testimonials-carousel,
-.testimonials .testimonials-slider {
-  overflow: hidden;
-}
-
-.testimonials .testimonial-item {
-  text-align: center;
-}
-
-.testimonials .testimonial-item .testimonial-img {
-  width: 120px;
-  border-radius: 50%;
-  border: 4px solid #fff;
-  margin: 0 auto;
-}
-
-.testimonials .testimonial-item h3 {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 10px 0 5px 0;
-  color: #111;
-}
-
-.testimonials .testimonial-item h4 {
-  font-size: 14px;
-  color: #999;
-  margin: 0 0 15px 0;
-}
-
-.testimonials .testimonial-item .quote-icon-left,
-.testimonials .testimonial-item .quote-icon-right {
-  color: #90c8fc;
-  font-size: 26px;
-}
-
-.testimonials .testimonial-item .quote-icon-left {
-  display: inline-block;
-  left: -5px;
-  position: relative;
-}
-
-.testimonials .testimonial-item .quote-icon-right {
-  display: inline-block;
-  right: -5px;
-  position: relative;
-  top: 10px;
-}
-
-.testimonials .testimonial-item p {
-  font-style: italic;
-  margin: 0 auto 15px auto;
-}
-
-.testimonials .swiper-pagination {
-  margin-top: 20px;
-  position: relative;
-}
-
-.testimonials .swiper-pagination .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background-color: #fff;
-  opacity: 1;
-  border: 1px solid #0563bb;
-}
-
-.testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
-}
-
-@media (min-width: 992px) {
-  .testimonials .testimonial-item p {
-    width: 80%;
-  }
-}
-
-/*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
 
 .contact{
   margin-top: 15vh;
-  padding-top: 1vh;
-  padding-bottom: 20vh;
+  padding-top: 5vh;
+  padding-bottom: 15vh;
 }
 .contact .info {
   width: 100%;
@@ -1236,11 +1153,11 @@ section {
   font-size: 15;
   font-style: italic;
   padding: 0;
-  margin: 0 0 40px 0;
+  /* margin: 0 0 40px 0; */
 }
 
 #footer .social-links {
-  margin: 0 0 40px 0;
+  margin: 0 0 0px 0;
 }
 
 #footer .social-links a {
