--- a/assets/css/project-details.css
+++ b/assets/css/project-details.css
@@ -2,6 +2,7 @@
     background:yellow;
   } */
 /*------- portfolio -------*/
+
 .project {
   margin: 15px 0;
 }
@@ -39,6 +40,8 @@
 }
 
 .project-info-box {
+  text-align: justify;
+  text-justify: inter-word;
   margin: 15px 0;
   background-color: rgb(248, 248, 248);
   padding: 30px 40px;
