--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,12 @@
 # General
 --------------------------------------------------------------*/
 ::-webkit-scrollbar {
-  width: 2px;
+  width: 1px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  /* background: #f1f1f1;  */
 }
  
 /* Handle */
